cabal-version:      3.0
name:               charades-app-server
version:            0.1.0.0
synopsis:           A charades API
-- description:
license:            MIT
license-file:       LICENSE
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable charades-app-server
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , scotty
                    , aeson
                    , text
                    , bytestring
                    , wai
                    , http-types
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
